--- a/#src/templates/theme/pages/category-detail.html
+++ b/#src/templates/theme/pages/category-detail.html
@@ -42,7 +42,7 @@
             <div class="gallery__images-grid">
               {% for image in images %}
               <a href="{{ image.image.url }}" data-gall="{{ image.category.slug }}" class="gallery__image">
-                {% thumbnail image.image  format="WEBP" crop="center" as im %}
+                {% thumbnail image.image format="WEBP" as im %}
                 <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}"
                   title="{{ image.name }}" />
                 {% endthumbnail %}
