--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -1,21 +1,32 @@
 {% extends "base.html" %} {% load static %} {% load thumbnail %}
 {% block title %}
+{% if product.meta_title %}
+{{ product.meta-title }}
+{% else %}
 Купить памятник {% if product.model %}модель {%filter lower%}{{product.model }}{% endfilter %}
 {% else %}
 {%filter lower%}{{product.name }}{% endfilter %}
 {% endif %}
-
 в Томске | Акрополь
+{% endif %}
+
 {% endblock %}
+
 {% block description %}
+
+{% if product.meta_description %}
+{{ product.meta_description }}
+{% else %}
 Купить памятник на могилу в Томске от мастерской Акрополь недорого. Фото памятников и цены указаны на сайте мастерской.
 Модель памятника
 {% if product.model %}{%filter lower%}{{product.model }}{% endfilter %}{% else %}
 {%filter lower%}{{product.name }}{% endfilter %}
 {% endif %}
+{% endif %}
 {% endblock %}
 
 {% block keywords %}
+{{ product.meta_keywords }}
 {%endblock %}
 {% block content %}
 
@@ -179,7 +190,8 @@
         </div>
       </div>
       {% endif %}
-      {% if product.related_products.all or products %}<a href="/category/soputstvuyushchie-tovary/" class="product__related--link">Смотреть все</a>{% endif %}
+      {% if product.related_products.all or products %}<a href="/category/soputstvuyushchie-tovary/"
+        class="product__related--link">Смотреть все</a>{% endif %}
     </div>
   </div>
 </main>
