--- a/main/core/admin/templates/shop/product/product_edit.html
+++ b/main/core/admin/templates/shop/product/product_edit.html
@@ -92,6 +92,13 @@
               {{ form.slug }} {{ form.slug.errors }}
             </div>
             <div class="form__group">
+              <label for="{{ form.order_by.id_for_label }}" class="form__controls-label">
+                <span>*</span>
+                Сортировка :
+              </label>
+              {{ form.order_by }} {{ form.order_by.errors }}
+            </div>
+            <div class="form__group">
               <label for="{{ form.category.id_for_label }}" class="form__controls-label">Выбор категории :</label>
               {{ form.category }} {{ form.category.errors }}
             </div>
