--- a/#src/templates/theme/includes/card.html
+++ b/#src/templates/theme/includes/card.html
@@ -34,12 +34,12 @@
     </div>
     <div itemprop="review" itemscope itemtype="http://schema.org/Review">
       <span itemprop="name"></span>
-      <span itemprop="author"></span>,
+      <span itemprop="author"></span>
       <meta itemprop="datePublished" content="2013-09-14">
       <div itemprop="reviewRating" itemscope itemtype="http://schema.org/Rating">
         <meta itemprop="worstRating" content="1">
         <span itemprop="ratingValue"></span>
-        <span itemprop="bestRating"></span>з
+        <span itemprop="bestRating"></span>
         <span itemprop="description"></span>
       </div>
     </div>
@@ -78,13 +78,13 @@
   </div>
   <div itemprop="review" itemscope itemtype="http://schema.org/Review">
     <span itemprop="name"></span>
-    <span itemprop="author"></span>,
+    <span itemprop="author"></span>
     <meta itemprop="datePublished" content="2013-09-14">
     <div itemprop="reviewRating" itemscope itemtype="http://schema.org/Rating">
       <meta itemprop="worstRating" content="1">
       <span itemprop="ratingValue"></span>
-      <span itemprop="bestRating"></span>звезд.
-      <span itemprop="description">текст_отзыва</span>
+      <span itemprop="bestRating"></span>
+      <span itemprop="description"></span>
     </div>
   </div>
   <a href="{{ product.get_absolute_url }}" class="card__content-link">Выбрать конфигурацию</a>
