--- a/main/core/theme/mb/templates/pages/category-detail.html
+++ b/main/core/theme/mb/templates/pages/category-detail.html
@@ -41,7 +41,7 @@
             {% endcomment %}
             <div class="gallery__images-grid">
               {% for image in images %}
-              {% thumbnail image.image "368x350" format="WEBP" crop="center" as im %}
+              {% thumbnail image.image "368x350" format="WEBP" as im %}
               <a href="{{ im.url }}" data-gall="{{ image.category.slug }}" class="gallery__image">
                 <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}"
                   title="{{ image.name }}" />
