--- a/main/core/theme/mb/templates/pages/category-detail.html
+++ b/main/core/theme/mb/templates/pages/category-detail.html
@@ -41,10 +41,12 @@
             {% endcomment %}
             <div class="gallery__images-grid">
               {% for image in images %}
-              <a href="{{ image.image.url }}" data-gall="{{ image.category.slug }}" class="gallery__image">
-                <img src="{{ image.image.url }}"  alt="{{ image.name }}"
+              {% thumbnail image.image "368x350" format="WEBP" crop="center" as im %}
+              <a href="{{ im.url }}" data-gall="{{ image.category.slug }}" class="gallery__image">
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}"
                   title="{{ image.name }}" />
               </a>
+              {% endthumbnail %}
               {% endfor %}
             </div>
           </div>
