--- a/#src/templates/admin/contact-page/contact.html
+++ b/#src/templates/admin/contact-page/contact.html
@@ -2,10 +2,10 @@
 <div class="page">
   <div class="page__inner">
     <div class="page__top">
-      <h1 class="page__title">Главная страница</h1>
+      <h1 class="page__title">Страница контактов</h1>
       <ul class="admin-breadcrumbs">
         <li><a href="{% url 'admin' %}">Панель управления</a></li>
-        <li><a href="{% url 'admin_settings' %}">Шаблон главной страницы</a></li>
+        <li><a href="{% url 'admin_settings' %}">Страница контактов</a></li>
       </ul>
     </div>
     <form action="." method="POST" class="form" enctype="multipart/form-data">
@@ -21,7 +21,7 @@
       {% csrf_token %}
       <div class="page-content _show" id="basic">
         <div class="page-content__row">
-          <div class="page-content__col">
+          <div class="page-content__onecol">
             <div class="form__group">
               <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> Заголовок h1 : </label>
               {{ form.meta_h1 }} {{ form.meta_h1.errors }}
@@ -45,11 +45,10 @@
               </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
-          </div>
-          <div class="page-content__col">
-            <div class="form__group form__group-image">
-              <label for="{{ form.banner.id_for_label }}" class="form__controls-label">Фоновая картинка:</label>
-              {{ form.banner }} {{ form.banner.errors }}
+            <div class="form__group">
+              <label for="{{ form.text.id_for_label }}" class="form__controls-label"> Текст :
+              </label>
+              {{ form.text }} {{ form.text.errors }}
             </div>
           </div>
         </div>
