--- a/#src/templates/admin/settings/general_settings.html
+++ b/#src/templates/admin/settings/general_settings.html
@@ -54,6 +54,22 @@
               <label for="{{ form.address_two.id_for_label }}" class="form__controls-label">Адрес(Демьяна Бедного): </label>
               {{ form.address_two }} {{ form.address_two.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.ur_name.id_for_label }}" class="form__controls-label">Юридическое название: </label>
+              {{ form.ur_name }} {{ form.ur_name.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.iin.id_for_label }}" class="form__controls-label">ИИН: </label>
+              {{ form.iin }} {{ form.iin.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.kpp.id_for_label }}" class="form__controls-label">КПП: </label>
+              {{ form.kpp }} {{ form.kpp.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.ogrn.id_for_label }}" class="form__controls-label">ОГРН: </label>
+              {{ form.ogrn }} {{ form.ogrn.errors }}
+            </div>
           </div>
           <div class="page-content__col">
             <div class="form__group form__group-image">
