--- a/main/core/admin/templates/gallery/gallery_settings.html
+++ b/main/core/admin/templates/gallery/gallery_settings.html
@@ -38,6 +38,11 @@
               </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.description.id_for_label }}" class="form__controls-label">{{ form.description.label }}:
+              </label>
+              {{ form.description }} {{ form.description.errors }}
+            </div>
           </div>
         </div>
       </div>
